--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3285,7 +3285,7 @@ input, select, textarea {
 
 	#intro {
 		color: #ffffff;
-		padding: 8rem 4rem 6rem 4rem ;
+		padding: 8rem 4rem 14rem 4rem ; /* 14 is the one to adjust for my name */
 		-moz-align-items: center;
 		-webkit-align-items: center;
 		-ms-align-items: center;
